--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ DB_HOST=db
 DB_PORT=5432
 DB_USER=api_user
 DB_NAME=booking_system_development
+
+# Kafka Configuration
+KAFKA_BROKERS=kafka:29092
+KAFKA_CLIENT_ID=api-service
+KAFKA_DEFAULT_TOPIC=booking-events
