--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   api-service:
     build:
@@ -8,6 +6,8 @@ services:
     container_name: api-service
     restart: on-failure
     command: npm run start
+    environment:
+      - NODE_ENV=${NODE_ENV:-development}
     ports:
       - "${APP_PORT}:${APP_PORT}" 
     volumes:
